# This file is part of OpenTSDB.
# Copyright (C) 2021  Yahoo.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "noop-metrics-reporter"
version = "0.1.0"
authors = ["sidhhu <sidhhu@verizonmedia.com>"]
edition = "2018"


[dependencies]
metrics-reporter = { path = "../metrics-reporter", version = "*" }

[lib]
name = "noop_metrics_reporter"
crate-type = ["dylib"]